kubernetes/apps/network/traefik/app/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "traefik.${SECRET_DOMAIN}"
    # cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "error-pages,internal-only,default-middlewares"
    # traefik.ingress.kubernetes.io/router.middlewares: "internal-only,default-middlewares,middlewares-authentik"
    gethomepage.dev/app: "traefik"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Traefik"
    gethomepage.dev/description: "Traefik Dashboard"
    gethomepage.dev/href: "https://traefik.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Kubernetes"
    gethomepage.dev/icon: "sh-traefik.png"
    # widget broken
    # gethomepage.dev/widget.type: traefik
    # gethomepage.dev/widget.url: "https://traefik.${SECRET_DOMAIN}"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "traefik.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: "traefik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000

# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: auth
# spec:
#   basicAuth:
#     secret: secretName # Kubernetes secret named "secretName"
