kubernetes/apps/network/traefik/app/dashboard/ingressRoute.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "traefik.${SECRET_DOMAIN}"
    # cert-manager.io/cluster-issuer: "letsencrypt-production"
    gethomepage.dev/app: "traefik"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Traefik"
    gethomepage.dev/description: "Traefik Dashboard"
    gethomepage.dev/href: "https://traefik.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/category: "Services"
    gethomepage.dev/icon: "sh-traefik.png"
    gethomepage.dev/widget.type: traefik
    gethomepage.dev/widget.url: "https://traefik.${SECRET_DOMAIN}"
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`traefik.${SECRET_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
      kind: Rule
      middlewares:
        - name: error-pages
        - name: internal-only
        - name: default-middlewares
        # - name: network-middlewares-authentik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: "${SECRET_DOMAIN/./-}-network-tls"
    # secretName: "traefik-dashboard-tls"
